# python-microservices-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
libs/common/: __init__.py  context.py  http_client.py  logging.py  metrics.py  models.py  utils.py
monolith/: Dockerfile
monolith/app/: main.py
monolith/app/api/: products.py  users.py
monolith/app/crud/: __init__.py  products.py  users.py
monolith/tests/: test_monolith.py
services/product_service/: Dockerfile
services/product_service/app/: crud.py  grpc_service.py  main.py  product_pb2.py  product_pb2_grpc.py
services/product_service/app/api/: routes.py
services/product_service/proto/: product.proto
services/product_service/service_tests/: test_product_api.py  test_product_edgecases.py  test_product_grpc.py  test_product_health_metrics.py
services/product_service/tests/: test_api.py  test_product_api.py
services/user_service/: Dockerfile
services/user_service/app/: crud.py  grpc_service.py  main.py  user_pb2.py  user_pb2_grpc.py
services/user_service/app/api/: routes.py
services/user_service/proto/: user.proto
services/user_service/service_tests/: test_user_api.py  test_user_edgecases.py  test_user_grpc.py  test_user_health_metrics.py
services/user_service/tests/: test_api.py  test_user_api.py
tests/: conftest.py  test_integration.py
