[tool.poetry]
name = "python-microservices-demo"
version = "0.1.0"
description = "Demo microservices using FastAPI to illustrate microservice patterns and best practices"
authors = ["Hiren Pattani <pattanihiren1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95"
uvicorn = {extras=["standard"], version = "^0.22"}
pydantic = "^1.10"
httpx = "^0.24"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.22"
black = "^24.7"
ruff = "^0.14"
isort = "^5.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# convenience scripts
start-user = "uvicorn:run"
